--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6276505933668266" crossorigin="anonymous"></script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-8 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-6 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -56,7 +56,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
@@ -70,12 +70,12 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
@@ -84,7 +84,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-8 u-border-palette-1-base u-button-style u-custom-color-8 u-hover-custom-color-8 u-nav-link u-text-active-custom-color-5 u-text-hover-custom-color-9" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
@@ -140,17 +140,16 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">Сборки Windows 8.1</h1>
-        <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 Pro V5 by Adderly (14.08.2022)<br>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <h1 class="u-text u-text-body-alt-color u-text-1">Сборки Windows 8.1</h1>
+        <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 Pro V6 by Adderly (09.10.2022)<br>
         </h6>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.1ByAdderly-2022-08-14-12-47-15.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.1ByAdderly-2022-08-14-12-47-53.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.1ByAdderly-2022-08-14-12-48-10.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.1ByAdderly-2022-08-14-12-48-18.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-body-alt-color u-text-3"> Сборка обновлена до Update 3 <br>
-          <br>Добавлена папка KMS <br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.1-2022-10-09-13-17-38.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.1-2022-10-09-13-21-00.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.1-2022-10-09-14-25-43.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.1-2022-10-09-13-21-59.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-align-center-xl u-text u-text-body-alt-color u-text-3"> Сборка обновлена до Update 3&nbsp;<br>
+          <br>Добавлена папка "от Марка Аддерли" в которой находится активатор, и инсталяторы самых нужных и авторских программ<br>
           <br>Интегрирован Framework 4.8, 4.7.2, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
           <br>Включен DirectPLay<br>
@@ -158,14 +157,13 @@
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
-          <br>Отключен файл подкачки<br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9 <br>
-          <br>Образ весит 5.25 GB, после установки Windows занимает 14 GB. <br>
+          <br>Образ весит 5.00 GB, после установки Windows занимает 15.8 GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.1.<br>
         </p>
-        <a href="https://drive.google.com/file/d/1eZLLMnePDVEsdk8y277XSLM38r_gKSl-/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V5 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/o0h7xgtzxdlt6c9/Windows+8.1+V5+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro V5 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/RhQ3za6S#qiSiRYFVVPCTdjtAQXmfgZ7rcXJMMqnt-mBUnkkqw6g" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-21 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 8.1 Pro V5 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1vKHTNIar1WejBxqDJHU2jK0FTfzgnO9R/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/x20fmtj2a3df3ie/Windows+8.1+V6+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/cvZWRC5D#IyfUATtLKd9KnqN1BdAg49JTik3WoEtefszVWGRUXYg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-21 u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro V6 by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-body-alt-color u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.0</a>
@@ -174,7 +172,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-custom-color-8 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-6 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-white u-text-1">Mark Adderly / Марк Аддерли<br>
         </p>
       </div></footer>
