--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -143,10 +143,10 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro 22H2 by Adderly (20.09.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro V2 22H2 by Adderly (10.10.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Win11ByAdderly22H2_1.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Win11ByAdderly22H2_2.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows11-2022-10-10-18-07-20.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows11-2022-10-10-18-07-29.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
         <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
@@ -158,9 +158,9 @@
           <br>Образ весит 5.67 GB, после установки Windows занимает 20.1 GB<br>
           <br>Образ основан на официальном MSDN Windows 11 v2 22H2 (22621.382)<br>Инсталятор использован от моей предыдущей сборки 22000.194, дабы не было проверки!<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1IHdJmVkwG-D-8Xd6mvYB4DniPYDOx6PH/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro 22H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/bihhrswi1vvs5j7/Windows+11+22H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank"> Скачать ​Windows 11 Pro 22H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/7WwE3SzJ#zE5GjDdJhS1S135KgI6Pqf9ijtYlrHETScTkRxuIkUs" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro 22H2 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1tQn1BGH4YLQtL0uxlLwgH-OhHWwju2v6/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V2 22H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/5yfa8w3d8q7poc8/Windows+11+V2+22H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank"> Скачать ​Windows 11 Pro V2 22H2 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/mBJFjYCa#nbC5GIE9H-6CiKPD2RRLdKbEVqYht-vXFGaj1OefVbU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V2 22H2 by Adderly [MEGA.NZ]</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
         </h6>
@@ -192,6 +192,9 @@
     <footer class="u-align-center u-clearfix u-custom-color-6 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-white u-text-1">Mark Adderly / Марк Аддерли<br>
         </p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 13px;" class="u-back-to-top u-custom-color-30 u-icon u-icon-rounded u-opacity u-opacity-85 u-radius-30" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   
 </body></html>
