--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -176,6 +176,9 @@
     <footer class="u-align-center u-clearfix u-custom-color-6 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-white u-text-1">Mark Adderly / Марк Аддерли<br>
         </p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 13px;" class="u-back-to-top u-custom-color-30 u-icon u-icon-rounded u-opacity u-opacity-85 u-radius-30" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   
 </body></html>
