--- a/Отзывы-и-обзоры.html
+++ b/Отзывы-и-обзоры.html
@@ -139,29 +139,35 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-a524">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-1">Обзоры и отзывы о Сборках от Аддерли</h1>
-        <h2 class="u-text u-text-2"> Сборка Windows 11 от Марка Аддерли - установка и обзор</h2>
+        <h2 class="u-text u-text-2"> Три micro сборки Windows весом меньше 1 ГБ!</h2>
         <div class="u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/7tV7j0oHoeM?mute=0&amp;showinfo=0&amp;controls=1&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
+          </div>
+        </div>
+        <h2 class="u-text u-text-3"> Сборка Windows 11 от Марка Аддерли - установка и обзор</h2>
+        <div class="u-preserve-proportions u-video u-video-contain u-video-2">
+          <div class="embed-responsive embed-responsive-2">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/Ni1U_IQoep0?mute=0&amp;showinfo=0&amp;controls=1&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
-        <h2 class="u-text u-text-3"> Сборка Windows 8.1 от Марка Аддерли - установка и обзор</h2>
-        <div class="u-preserve-proportions u-video u-video-contain u-video-2">
-          <div class="embed-responsive embed-responsive-2">
+        <h2 class="u-text u-text-4"> Сборка Windows 8.1 от Марка Аддерли - установка и обзор</h2>
+        <div class="u-preserve-proportions u-video u-video-contain u-video-3">
+          <div class="embed-responsive embed-responsive-3">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/I0aNwbAkfmk?mute=0&amp;showinfo=0&amp;controls=1&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
-        <h2 class="u-text u-text-4"> Сборка Windows 7 от Марка Аддерли - установка и обзор</h2>
-        <div class="u-preserve-proportions u-video u-video-contain u-video-3">
-          <div class="embed-responsive embed-responsive-3">
+        <h2 class="u-text u-text-5"> Сборка Windows 7 от Марка Аддерли - установка и обзор</h2>
+        <div class="u-preserve-proportions u-video u-video-contain u-video-4">
+          <div class="embed-responsive embed-responsive-4">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/Cjg7vtmcA-s?mute=0&amp;showinfo=0&amp;controls=1&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
-        <h2 class="u-text u-text-5"> Обзор сайта и сборку от Марка Аддерли.</h2>
-        <div class="u-preserve-proportions u-video u-video-contain u-video-4">
-          <div class="embed-responsive embed-responsive-4">
+        <h2 class="u-text u-text-6"> Обзор сайта и сборку от Марка Аддерли.</h2>
+        <div class="u-preserve-proportions u-video u-video-contain u-video-5">
+          <div class="embed-responsive embed-responsive-5">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/ivCwZXlo95s?mute=0&amp;showinfo=0&amp;controls=1&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
